Version 0.2-1:

  - dsm.score() now supports user-defined association measures, which are automatically evaluated in batches to reduce memory overhead compared to a naive vectorized implementation
  - subset(..., recursive=TRUE) now runs garbage collection after every iteration to avoid multiple copies of DSM object
  - as.distmat() marks and arbitrary matrix as a pre-computed dist.matrix object, so it can be used for lookup with nearest.neighbours() and pair.distances()
  - nearest.neighbours() improved to support lookup in sparse pre-computed distance matrix
  - pair.distances() improved to support lookup (and calculation of neighbour ranks) in a pre-computed distance matrix

Version 0.2-0:

  - the first public release of the wordspace package \o/

Version 0.1-24:

  - read.dsm.triplet can now load marginal frequencies from separate files, so it is a full-fledged replacement for read.dsm.ucs (though less memory-efficient than the native UCS format for very large models)
  - RC 2 for public release

Version 0.1-23:

  - completed vignette with tutorial introduction
  - RC 1 for public release

Version 0.1-22:

  - clean up & complete documentation in preparation for first public release
  - reduce size of example data (verb-noun triples, pre-compiled DSM vectors)

Version 0.1-21:

  - replace readr::read_delim() with iotools::read.delim.raw(), which is slightly faster and leaner; also avoids expensive dependencies of readr such as BH (Boost libraries)
  - implemented work-arounds to support compressed files and different character encodings with iotools
  - package test for file input (triplet and UCS format, different encodings) with suitable sample files in extdata/

Version 0.1-20:

  - new sample data: DSM objects for small illustrative term-term and term-context matrix

Version 0.1-19:

  - complete basic documentation for all functions and data sets
  - data set DSM_VerbNounTriples_DESC removed to reduce package size