@@ -2,7 +2,7 @@ Package: wordspace
 Type: Package
 Title: Distributional Semantic Models in R
 Version: 0.2-1
-Date: 2017-03-22
+Date: 2017-03-25
 Author: Stefan Evert [http://www.stefan-evert.de/]
 Maintainer: Stefan Evert <stefan.evert@fau.de>
 Depends: R (>= 3.0.0), Matrix
